--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="feed">Feed</string>
+    <string name="music">Music</string>
+    <string name="help">Help</string>
+    <string name="profile">Profile</string>
+    <string name="welcome_user">Welcome User!</string>
 </resources>
